sub2api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sub2api
spec:
  selector:
    app: sub2api
  ports:
    - name: http
      port: 8080
      targetPort: http
